--- a/bank-automat/creditvalikko.ui
+++ b/bank-automat/creditvalikko.ui
@@ -102,12 +102,12 @@ background-repeat: none;</string>
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="kirjautunutLabel">
    <property name="geometry">
     <rect>
-     <x>1210</x>
+     <x>500</x>
      <y>10</y>
-     <width>281</width>
+     <width>301</width>
      <height>41</height>
     </rect>
    </property>
@@ -118,18 +118,46 @@ background-repeat: none;</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(0, 0, 0);
-background-color: rgb(85, 170, 127);</string>
+    <string notr="true">QLabel{
+	background-color: transparent;
+	color: rgb(0, 0, 0);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
    </property>
    <property name="text">
-    <string>Olet nyt kirjautuneena.....</string>
+    <string>Olet nyt kirjautunut sisään,</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="kayttajaNimi">
+   <property name="geometry">
+    <rect>
+     <x>800</x>
+     <y>10</y>
+     <width>221</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLineEdit{
+	background: transparent;
+	border: none;
+}</string>
    </property>
   </widget>
   <zorder>debitNappi</zorder>
   <zorder>valitse</zorder>
   <zorder>creditNappi</zorder>
   <zorder>logo</zorder>
-  <zorder>label</zorder>
+  <zorder>kirjautunutLabel</zorder>
+  <zorder>kayttajaNimi</zorder>
  </widget>
  <resources/>
  <connections/>
