--- a/bank-automat/lahjoitus.ui
+++ b/bank-automat/lahjoitus.ui
@@ -331,12 +331,12 @@ QPushButton:pressed{
     <string>Palaa takaisin</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="kirjautunutLabel">
    <property name="geometry">
     <rect>
-     <x>510</x>
+     <x>490</x>
      <y>20</y>
-     <width>281</width>
+     <width>301</width>
      <height>41</height>
     </rect>
    </property>
@@ -347,11 +347,17 @@ QPushButton:pressed{
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(0, 0, 0);
-background-color: rgb(85, 170, 127);</string>
+    <string notr="true">QLabel{
+	background-color: transparent;
+	color: rgb(0, 0, 0);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
    </property>
    <property name="text">
-    <string>Olet nyt kirjautuneena.....</string>
+    <string>Olet nyt kirjautunut sisään,</string>
    </property>
   </widget>
   <widget class="QLabel" name="logo">
@@ -407,6 +413,12 @@ background-repeat: none;</string>
     <font>
      <pointsize>16</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLineEdit{
+	background: transparent;
+	border: none;
+}</string>
    </property>
   </widget>
  </widget>
