--- a/bank-automat/saldo.ui
+++ b/bank-automat/saldo.ui
@@ -10,6 +10,12 @@
     <height>689</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Ubuntu</family>
+    <pointsize>18</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
