--- a/bank-automat/kirjaudusisaan.ui
+++ b/bank-automat/kirjaudusisaan.ui
@@ -22,9 +22,9 @@
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>690</x>
+     <x>720</x>
      <y>610</y>
-     <width>651</width>
+     <width>581</width>
      <height>111</height>
     </rect>
    </property>
@@ -33,13 +33,13 @@
      <widget class="QLabel" name="korttiTeksti">
       <property name="minimumSize">
        <size>
-        <width>300</width>
+        <width>240</width>
         <height>50</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>300</width>
+        <width>240</width>
         <height>50</height>
        </size>
       </property>
@@ -63,26 +63,29 @@
       <property name="text">
        <string>   Korttinumero:</string>
       </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="salasanaKayttaja">
       <property name="minimumSize">
        <size>
-        <width>150</width>
+        <width>130</width>
         <height>50</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>150</width>
+        <width>130</width>
         <height>50</height>
        </size>
       </property>
       <property name="font">
        <font>
         <family>Ubuntu</family>
-        <pointsize>14</pointsize>
+        <pointsize>18</pointsize>
         <italic>false</italic>
         <bold>false</bold>
        </font>
@@ -104,7 +107,7 @@
        <enum>QLineEdit::Password</enum>
       </property>
       <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       <set>Qt::AlignCenter</set>
       </property>
       <property name="placeholderText">
        <string/>
@@ -115,20 +118,20 @@
      <widget class="QLineEdit" name="tunnusKayttaja">
       <property name="minimumSize">
        <size>
-        <width>300</width>
+        <width>240</width>
         <height>50</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>300</width>
+        <width>240</width>
         <height>50</height>
        </size>
       </property>
       <property name="font">
        <font>
         <family>Ubuntu</family>
-        <pointsize>14</pointsize>
+        <pointsize>18</pointsize>
         <italic>false</italic>
         <bold>false</bold>
        </font>
@@ -147,7 +150,7 @@
        <number>16</number>
       </property>
       <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       <set>Qt::AlignCenter</set>
       </property>
       <property name="placeholderText">
        <string/>
@@ -158,13 +161,13 @@
      <widget class="QLabel" name="pinTeksti">
       <property name="minimumSize">
        <size>
-        <width>150</width>
+        <width>130</width>
         <height>50</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>150</width>
+        <width>130</width>
         <height>50</height>
        </size>
       </property>
