--- a/bank-automat/creditvalikko.ui
+++ b/bank-automat/creditvalikko.ui
@@ -17,29 +17,40 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(255, 255, 255);</string>
+   <string notr="true">background-color: rgb(224, 255, 237);</string>
   </property>
   <widget class="QLabel" name="valitse">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>420</x>
      <y>170</y>
-     <width>761</width>
-     <height>61</height>
+     <width>731</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Ubuntu</family>
      <pointsize>36</pointsize>
-     <bold>true</bold>
+     <bold>false</bold>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(64, 88, 100);</string>
+    <string notr="true">QLabel{
+	border-image: url(:/tekstitausta.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
    </property>
    <property name="text">
     <string>Valitse korttitapahtuman tyyppi:</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QPushButton" name="creditNappi">
@@ -90,6 +101,12 @@ background-repeat: none;</string>
      <width>171</width>
      <height>191</height>
     </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>200</width>
+     <height>230</height>
+    </size>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: transparent;
