--- a/bank-automat/mainwindow.ui
+++ b/bank-automat/mainwindow.ui
@@ -13,56 +13,83 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(224, 255, 237);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="kirjauduNappi">
     <property name="geometry">
      <rect>
       <x>640</x>
       <y>190</y>
-      <width>641</width>
-      <height>631</height>
+      <width>640</width>
+      <height>700</height>
      </rect>
     </property>
+    <property name="minimumSize">
+     <size>
+      <width>640</width>
+      <height>700</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>640</width>
+      <height>700</height>
+     </size>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Jatka eteenpäin painamalla tästä!&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton{
-	border-image: url(:/poorbanklogo.png);
-	background-color: transparent;
-	color: rgb(255, 255, 255);
-	background: none;
-	border: none;
-	background-repeat: none;
-	selection-color: rgb(0, 0, 0);
+     <string notr="true">QPushButton {
+    border-image: url(:/poorbanklogo.png);
+    background-color: transparent;
+    color: rgb(255, 255, 255);
+    background: none;
+    border: none;
+    background-repeat: none;
+    selection-color: rgb(0, 0, 0);
 }</string>
     </property>
     <property name="text">
      <string/>
     </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="autoRepeat">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>70</y>
-      <width>710</width>
-      <height>50</height>
+      <x>550</x>
+      <y>60</y>
+      <width>800</width>
+      <height>70</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>710</width>
-      <height>50</height>
+      <width>800</width>
+      <height>70</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>700</width>
-      <height>50</height>
+      <width>800</width>
+      <height>70</height>
      </size>
     </property>
     <property name="font">
      <font>
       <family>Ubuntu</family>
-      <pointsize>22</pointsize>
+      <pointsize>24</pointsize>
      </font>
     </property>
     <property name="layoutDirection">
