--- a/bank-automat/nosto.ui
+++ b/bank-automat/nosto.ui
@@ -14,13 +14,13 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">background-color: rgb(224, 255, 237);</string>
   </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>720</x>
-     <y>220</y>
+     <x>650</x>
+     <y>300</y>
      <width>608</width>
      <height>421</height>
     </rect>
@@ -349,6 +349,12 @@ QPushButton:pressed{
      <height>191</height>
     </rect>
    </property>
+   <property name="maximumSize">
+    <size>
+     <width>200</width>
+     <height>230</height>
+    </size>
+   </property>
    <property name="styleSheet">
     <string notr="true">background-color: transparent;
 border-image: url(:/poorbanklogo.png);
@@ -409,6 +415,53 @@ background-repeat: none;</string>
    </property>
    <property name="text">
     <string>Olet nyt kirjautunut sisään,</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="kirjauduTeksti">
+   <property name="geometry">
+    <rect>
+     <x>540</x>
+     <y>210</y>
+     <width>801</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>801</width>
+     <height>80</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>801</width>
+     <height>80</height>
+    </size>
+   </property>
+   <property name="font">
+    <font>
+     <family>Ubuntu</family>
+     <pointsize>36</pointsize>
+     <italic>false</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel{
+	border-image: url(:/tekstitausta.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
+   </property>
+   <property name="text">
+    <string>Valitse summa, jonka haluat nostaa</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
