--- a/bank-automat/onnistui.ui
+++ b/bank-automat/onnistui.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(224, 255, 237);</string>
+  </property>
   <widget class="QLabel" name="logo">
    <property name="geometry">
     <rect>
@@ -21,6 +24,12 @@
      <width>171</width>
      <height>191</height>
     </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>200</width>
+     <height>230</height>
+    </size>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: transparent;
