--- a/bank-automat/tapahtumat.ui
+++ b/bank-automat/tapahtumat.ui
@@ -167,6 +167,19 @@ background-repeat: none;</string>
     <string>seuraavaNappi</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="takaisinNappi2">
+   <property name="geometry">
+    <rect>
+     <x>930</x>
+     <y>600</y>
+     <width>75</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>takaisinNappi</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
